// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render align 1`] = `
<div
  className="cf-1w7btnm"
>
  Hello
</div>
`;

exports[`should render lowercase 1`] = `
<div
  className="cf-y1tq1q"
>
  Hello
</div>
`;

exports[`should render normal size 1`] = `
<div
  className="cf-1i7qq6k"
>
  Hello
</div>
`;

exports[`should render small size 1`] = `
<div
  className="cf-ypvnxt"
>
  Hello
</div>
`;

exports[`should render titlecase case 1`] = `
<div
  className="cf-1vzpvz1"
>
  Hello
</div>
`;

exports[`should render type 1`] = `
<div
  className="cf-1k7zb1g"
>
  Hello
</div>
`;
